# bert-triton-server

./: .gitignore  Dockerfile  README.md  makefile  pyproject.toml
model_repository/bert_ensemble/: config.pbtxt
model_repository/bert_model/: config.pbtxt
model_repository/bert_tokenizer/: config.pbtxt
model_repository/bert_tokenizer/1/: model.py
scripts/: export_model.py
