[project]
name = "bert-triton-server-k8s"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "onnx>=1.20.1",
    "onnxscript>=0.5.7",
    "optimum[onnxruntime]>=2.1.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "tritonclient[http]>=2.64.0",
]
